[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/inventory_displays/mouse/MouseTexture.gd" type="Script" id=1]
[ext_resource path="res://items/inventory_textures/ItemInventorySprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/inventory_displays/mouse/Description.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/inventory_displays/textures/cursor.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Cursor"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ItemInventorySprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cursor:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HoveredObjectSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="Mouse" type="Node2D"]
process_priority = -2
script = ExtResource( 1 )

[node name="ItemInventorySprite" parent="." instance=ExtResource( 2 )]
position = Vector2( 4, 4 )

[node name="HoveredObjectSprite" type="Sprite" parent="."]
position = Vector2( 5, 5 )
offset = Vector2( 16, 16 )

[node name="DescriptionContainer" type="Node2D" parent="."]

[node name="Description" parent="DescriptionContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 13.0
margin_bottom = 12.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Cursor = SubResource( 1 )

[node name="Cursor" type="Sprite" parent="."]
self_modulate = Color( 0.698039, 0.866667, 0.0941176, 1 )
position = Vector2( 2.38419e-07, 2.38419e-07 )
texture = ExtResource( 4 )
offset = Vector2( 3, 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
